[project]
name = "rag-mvp-basic"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "groq>=1.1.1",
    "llama-index>=0.14.16",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-llms-groq>=0.5.0",
    "llama-index-readers-file>=0.5.6",
    "llama-index-readers-web>=0.6.0",
    "llama-index-vector-stores-chroma>=0.5.5",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
]
